mp7/nightly.txt
Compilation Results:
********************
sudoku.c: In function ‘int solve_sudoku(int (*)[9])’:
sudoku.c:118:32: error: ‘all_cells_assigned’ was not declared in this scope
   if (all_cells_assigned(sudoku) == 1) //if no empty cells
                                ^
g++: error: grade/sudoku.o: No such file or directory

******Testing mp7******
Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2022-03-25_00:23:17
